k8s/2.3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mt-svc
  namespace: netology
spec:
  selector:
    app: nginx-mt
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80    
    - protocol: TCP
      name: multitool
      port: 1080
      targetPort: 1080
